--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,59 @@
+asgiref==3.5.2
+async-generator==1.10
+async-timeout==4.0.2
+attrs==22.1.0
+autobahn==22.7.1
+Automat==20.2.0
 beautifulsoup4==4.11.1
-certifi==2022.6.15.2
-charset-normalizer==2.1.1
-customized-konlpy==0.0.64
+bs4==0.0.1
+certifi==2022.9.24
+cffi==1.15.1
+channels==4.0.0
+channels-redis==4.0.0
+constantly==15.1.0
+cryptography==38.0.1
+daphne==4.0.0
+Deprecated==1.2.13
+Django==4.1.2
+exceptiongroup==1.0.0rc9
+h11==0.14.0
+hyperlink==21.0.0
 idna==3.4
-joblib==1.2.0
-JPype1==1.4.0
-konlpy==0.6.0
-lxml==4.9.1
-numpy==1.23.3
-pandas==1.5.0
+incremental==22.10.0
+mouse==0.7.1
+msgpack==1.0.4
+numpy==1.23.5
+outcome==1.2.0
+packaging==21.3
+pandas==1.5.2
+Pillow==9.2.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
+pypiwin32==223
+PySocks==1.7.1
+pytesseract==0.3.10
 python-dateutil==2.8.2
-pytz==2022.2.1
-requests==2.28.1
-scikit-learn==1.1.2
-scipy==1.9.1
+pytz==2022.6
+pywin32==305
+redis==4.3.4
+selenium==4.5.0
+service-identity==21.1.0
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-threadpoolctl==3.1.0
+sqlparse==0.4.3
+trio==0.22.0
+trio-websocket==0.9.2
+Twisted==22.8.0
+twisted-iocpsupport==1.0.2
+txaio==22.2.1
+typing_extensions==4.4.0
+tzdata==2022.5
 urllib3==1.26.12
+wrapt==1.14.1
+wsproto==1.2.0
+zope.interface==5.5.0
